# PluginLoader

./: CMakeLists.txt  README.md  VersionGenerator.cmake
src/: DllMain.cpp
version/: VersionInfo.h  VersionResource.rc
